[gd_scene load_steps=4 format=2]

[ext_resource path="res://stage/main.gd" type="Script" id=1]
[ext_resource path="res://sprites/grid.png" type="Texture" id=2]
[ext_resource path="res://stage/grid.gd" type="Script" id=3]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Grid" type="Sprite" parent="." index="0"]

position = Vector2( 0, 25 )
texture = ExtResource( 2 )
centered = false
script = ExtResource( 3 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]
play_dimensions = Vector2( 10, 22 )
side_offset = 1
cell_size = 24

[node name="Tetrominos" type="Node2D" parent="Grid" index="0"]

position = Vector2( 24, 0 )
_sections_unfolded = [ "Transform" ]

[node name="ActiveMinoPosition" type="Position2D" parent="Grid" index="1"]

position = Vector2( 24, 0 )
_sections_unfolded = [ "Transform" ]

[node name="DropperTimer" type="Timer" parent="." index="1"]

process_mode = 0
wait_time = 0.8
one_shot = false
autostart = false

[connection signal="timeout" from="DropperTimer" to="." method="_on_DropperTimer_timeout"]


